# reboot-health

./: .gitignore  AGENTS.md  README.md  pyproject.toml
health_platform/: AGENTS.md  README.md  alembic.ini  pyproject.toml
health_platform/migrations/: README.md  env.py  script.py.mako
health_platform/migrations/versions/: 20260712_0001_identity_audit_foundation.py  20260712_0002_audit_chain_heads_and_rbac.py  20260712_0003_identity_sql_persistence.py
health_platform/src/health_platform/: __init__.py
health_platform/src/health_platform/adapters/: __init__.py
health_platform/src/health_platform/application/: __init__.py
health_platform/src/health_platform/domain/: __init__.py
health_platform/src/health_platform/interfaces/: __init__.py
health_platform/src/health_platform/modules/: AGENTS.md
health_platform/src/health_platform/modules/agent_integration/: AGENTS.md  README.md
health_platform/src/health_platform/modules/audit/: README.md
health_platform/src/health_platform/modules/conversation/: AGENTS.md  README.md
health_platform/src/health_platform/modules/fact/: AGENTS.md  README.md
health_platform/src/health_platform/modules/file/: AGENTS.md  README.md
health_platform/src/health_platform/modules/goal/: AGENTS.md  README.md
health_platform/src/health_platform/modules/identity/: README.md
health_platform/src/health_platform/modules/plan/: AGENTS.md  README.md
health_platform/src/health_platform/modules/risk/: AGENTS.md  README.md
health_platform/src/health_platform/modules/secret/: AGENTS.md  README.md
health_platform/src/health_platform/platform/background/: __init__.py  worker.py
health_platform/src/health_platform/platform/configuration/: __init__.py  settings.py
health_platform/src/health_platform/ports/: __init__.py
health_platform/tests/: __init__.py  conftest.py  test_api.py  test_background.py  test_identity_application.py  test_identity_domain.py  test_identity_policy.py  test_postgres_integration.py  test_sql_persistence_unit.py
(+594 files in other folders)
