[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "reboot-health-platform"
version = "0.0.0"
description = "Framework-independent Health Platform skeleton for reboot-health"
requires-python = ">=3.12"

[tool.setuptools.packages.find]
where = ["src"]
