[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/health_platform"]

[project]
name = "reboot-health-platform"
version = "0.1.0"
description = "Production foundation and identity service for reboot-health"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14,<2",
  "argon2-cffi>=23.1,<26",
  "cryptography>=48.0.1,<49",
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "joserfc>=1.0,<2",
  "oauthlib>=3.2,<4",
  "opentelemetry-api>=1.29,<2",
  "opentelemetry-sdk>=1.29,<2",
  "opentelemetry-instrumentation-fastapi>=0.50b0,<1",
  "psycopg[binary]>=3.2,<4",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "redis>=5.2,<7",
  "sqlalchemy>=2.0,<3",
  "uvicorn>=0.34,<1",
]

[dependency-groups]
dev = [
  "bandit>=1.8,<2",
  "mypy>=1.14,<2",
  "pip-audit>=2.8,<3",
  "pytest>=9.0.3,<10",
  "pytest-cov>=6,<8",
  "ruff>=0.9,<1",
  "testcontainers[postgres]>=4.9,<5",
  "types-oauthlib>=3.2,<4",
  "types-redis>=4.6,<5",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = ["postgres: requires a real PostgreSQL instance"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["RUF002", "RUF003"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["health_platform"]
mypy_path = ["src"]
plugins = ["pydantic.mypy"]

[tool.coverage.run]
source = ["health_platform"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 75
